# Parametrizable

./: .gitignore  README.md  conanfile.py
cmake/: CMakeLists.txt
example/: CMakeLists.txt  ExampleWidget.cpp  ExampleWidget.h  main.cpp
include/: GenericParameter.h  GenericParameterWidget.h  GenericVisualComponent.h  Parametrizable.h
src/: GenericParameter.cpp  GenericParameterWidget.cpp  GenericVisualComponent.cpp  Parametrizable.cpp
