CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT( Parametrizable_Example )

FIND_PACKAGE( Qt5Core )
FIND_PACKAGE( Qt5Gui )
FIND_PACKAGE( Qt5Widgets )

SET( CMAKE_AUTOMOC ON )

INCLUDE_DIRECTORIES(
	../../include
	${CMAKE_CURRENT_BINARY_DIR}
)

ADD_EXECUTABLE ( ${PROJECT_NAME}
	ExampleWidget.h
	ExampleWidget.cpp
	main.cpp
)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
	Parametrizable
	Qt5::Core
	Qt5::Gui
	Qt5::Widgets
)

SET_PROPERTY( TARGET ${PROJECT_NAME} PROPERTY FOLDER "Examples")

GET_TARGET_PROPERTY(QMAKE_EXECUTABLE Qt5::qmake IMPORTED_LOCATION)
GET_FILENAME_COMPONENT(QT_BIN_DIR "${QMAKE_EXECUTABLE}" DIRECTORY)
FIND_PROGRAM(WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${QT_BIN_DIR}")

ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND "${CMAKE_COMMAND}" -E
    env PATH="${_qt_bin_dir}" "${WINDEPLOYQT_EXECUTABLE}" "$<TARGET_FILE:${PROJECT_NAME}>" "--dir" "${CMAKE_CURRENT_BINARY_DIR}"
    COMMENT "Running windeployqt..."
)